[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-dagster"
version = "0.1.0"
description = "Dagster data orchestration for VIBE project"
requires-python = ">=3.9"

dependencies = [
    "dagster>=1.5.0",
    "dagster-postgres",
    "dagster-dbt",
    "dbt-postgres",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
